# loggerheads

./: .gitignore  Cargo.toml  README.md  filewatcher.event.sh  loggerheads.toml  processwatcher.event.sh  public_key.asc
.github/workflows/: release.yml
src/: cli.rs  config.rs  main.rs
src/platform/: logger.rs  mod.rs  types.rs  utils.rs  yes.json
src/watchers/: filewatch.rs  mod.rs  network.rs  process.rs  usb.rs
