[package]
name = "loggerheads"
version = "0.1.0"
authors = ["bunmigrey@icloud.com"]
edition = "2021"
description = "Cross-platform system activity logger written in Rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/6amson/loggerheads"
keywords = ["logger", "monitor", "rust", "system"]
categories = ["command-line-utilities"]

[[bin]]
name = "loggerheads"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
simplelog = "0.12"
chrono = "0.4"
directories = "5.0"
sysinfo = { version = "0.30", features = ["multithread"] }
notify = "6.1"           # Optional: for file/folder monitoring
thiserror = "1.0"
toml = "0.8"
futures = "0.3"
netstat2 = "0.11"
pnet = "0.34.0"
clap = { version = "4.5", features = ["derive"] }


[target.'cfg(unix)'.dependencies]
libc = "0.2"


# Platform-specific crates
# Linux
procfs = { version = "0.15", optional = true }
udev = { version = "0.7", optional = true }

# Windows
windows = { version = "0.52", features = ["Win32_System", "Win32_Devices", "Win32_Foundation"], optional = true }

# macOS (Optional platform-specific code)
libproc = { version = "0.12", optional = true }

[features]
linux = ["dep:procfs", "dep:udev"]
windows = ["dep:windows"]
macos = ["dep:libproc"]
default = []




